[gd_scene load_steps=35 format=3 uid="uid://cca5nhctbwkv8"]

[ext_resource type="Texture2D" uid="uid://d2itq8rdg86dq" path="res://Art Assets/Slider bar.png" id="1_11qdp"]
[ext_resource type="Script" path="res://Scenes/Options Menu.gd" id="1_slqk8"]
[ext_resource type="Texture2D" uid="uid://dtpjep6513cm7" path="res://Art Assets/Slider handle.png" id="2_expmd"]
[ext_resource type="Texture2D" uid="uid://dx8ds714l784a" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-4.png" id="3_huekd"]
[ext_resource type="Texture2D" uid="uid://cdhb122epnyem" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-14.png" id="3_tqmhv"]
[ext_resource type="Texture2D" uid="uid://1h72ras2cjyv" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-1.png" id="4_xqql3"]
[ext_resource type="Texture2D" uid="uid://celbyxj4fd718" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-2.png" id="5_gd63g"]
[ext_resource type="Texture2D" uid="uid://b3rfb8fqupgj6" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-3.png" id="6_h4ycm"]
[ext_resource type="Texture2D" uid="uid://dn02d8g5miaax" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-5.png" id="8_82jfx"]
[ext_resource type="Texture2D" uid="uid://bs8o652qq0eoi" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-6.png" id="9_ttuvs"]
[ext_resource type="Texture2D" uid="uid://biv2mv0wew5a8" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-7.png" id="10_q48i5"]
[ext_resource type="Texture2D" uid="uid://b3afufq141jcb" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-8.png" id="11_vynme"]
[ext_resource type="Texture2D" uid="uid://higpq8ctl1or" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-9.png" id="12_4oj44"]
[ext_resource type="Texture2D" uid="uid://bmn8wpimj51uy" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-10.png" id="13_vw5bh"]
[ext_resource type="Texture2D" uid="uid://du6j0deoi51ed" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-11.png" id="14_c6mj6"]
[ext_resource type="Texture2D" uid="uid://kfwuj35km17q" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-12.png" id="15_yr056"]
[ext_resource type="Texture2D" uid="uid://c26j31eju77ql" path="res://Art Assets/SFX volume text PNGs/SFX Volume animated text-1.png" id="16_1bg0q"]
[ext_resource type="Texture2D" uid="uid://dmhqpseqxe7i6" path="res://Art Assets/Music Volume text PNGs/Music Volume animated text-13.png" id="16_r1ois"]
[ext_resource type="Texture2D" uid="uid://bgq1fdn010eqw" path="res://Art Assets/SFX volume text PNGs/SFX Volume animated text-2.png" id="17_7bvsr"]
[ext_resource type="Texture2D" uid="uid://bdyvvs3r3lyte" path="res://Art Assets/SFX volume text PNGs/SFX Volume animated text-3.png" id="18_cmvyq"]
[ext_resource type="Texture2D" uid="uid://du1yeup6sl1f0" path="res://Art Assets/SFX volume text PNGs/SFX Volume animated text-4.png" id="19_dsh5g"]
[ext_resource type="Texture2D" uid="uid://r58bxcdykskc" path="res://Art Assets/SFX volume text PNGs/SFX Volume animated text-5.png" id="20_0rxiw"]
[ext_resource type="Texture2D" uid="uid://wa27xj78wxsq" path="res://Art Assets/SFX volume text PNGs/SFX Volume animated text-6.png" id="21_kuskj"]
[ext_resource type="Texture2D" uid="uid://pqloqy36ui3x" path="res://Art Assets/SFX volume text PNGs/SFX Volume animated text-7.png" id="22_niof7"]
[ext_resource type="Texture2D" uid="uid://dcojovgflorj6" path="res://Art Assets/SFX volume text PNGs/SFX Volume animated text-8.png" id="23_aavyd"]
[ext_resource type="Texture2D" uid="uid://ica0tk1jla74" path="res://Art Assets/SFX volume text PNGs/SFX Volume animated text-9.png" id="24_ftjol"]
[ext_resource type="Texture2D" uid="uid://cy1d05iv1lhk7" path="res://Art Assets/SFX volume text PNGs/SFX Volume animated text-10.png" id="25_a2ee7"]
[ext_resource type="Texture2D" uid="uid://bua2756micnb0" path="res://Art Assets/SFX volume text PNGs/SFX Volume animated text-11.png" id="26_lp3cn"]
[ext_resource type="Texture2D" uid="uid://jv0tjsvwyuq" path="res://Art Assets/SFX volume text PNGs/SFX Volume animated text-12.png" id="27_tjjh5"]

[sub_resource type="Animation" id="Animation_ulx1e"]
resource_name = "SFX Volume Text Animation"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/SFXVolumeAnimatedText:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("16_1bg0q"), ExtResource("17_7bvsr"), ExtResource("18_cmvyq"), ExtResource("19_dsh5g"), ExtResource("20_0rxiw"), ExtResource("21_kuskj"), ExtResource("22_niof7"), ExtResource("23_aavyd"), ExtResource("24_ftjol"), ExtResource("25_a2ee7"), ExtResource("26_lp3cn"), ExtResource("27_tjjh5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/SFXVolumeAnimatedText:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(0.5, 0.5), Vector2(0.3, 0.3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/SFXVolumeAnimatedText:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(870, 520), Vector2(930, 540), Vector2(870, 520)]
}

[sub_resource type="Animation" id="Animation_ag1ib"]
resource_name = "Music Volume Text Animation"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/MusicVolumeAnimatedText:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("4_xqql3"), ExtResource("5_gd63g"), ExtResource("6_h4ycm"), ExtResource("3_huekd"), ExtResource("8_82jfx"), ExtResource("9_ttuvs"), ExtResource("10_q48i5"), ExtResource("11_vynme"), ExtResource("12_4oj44"), ExtResource("13_vw5bh"), ExtResource("14_c6mj6"), ExtResource("15_yr056"), ExtResource("16_r1ois"), ExtResource("3_tqmhv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/MusicVolumeAnimatedText:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.3, 0.3), Vector2(0.5, 0.5), Vector2(0.3, 0.3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/MusicVolumeAnimatedText:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(510, 520), Vector2(570, 540), Vector2(510, 520)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hyx8a"]
_data = {
"Music Volume Text Animation": SubResource("Animation_ag1ib"),
"SFX Volume Text Animation": SubResource("Animation_ulx1e")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rine5"]
texture = ExtResource("1_11qdp")
expand_margin_left = 50.0
expand_margin_top = 5.0
expand_margin_right = 50.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7e887"]
texture = ExtResource("2_expmd")

[node name="OptionsMenu" type="Node"]
script = ExtResource("1_slqk8")

[node name="MusicVolumeTextAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hyx8a")
}

[node name="SFXVolumeTextAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hyx8a")
}

[node name="MusicVolumeSlider" type="VSlider" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -224.0
offset_right = -79.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("2_expmd")
theme_override_icons/grabber_highlight = ExtResource("2_expmd")
theme_override_styles/slider = SubResource("StyleBoxTexture_rine5")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_7e887")
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumePercentage" type="Label" parent="MusicVolumeSlider"]
layout_mode = 0
offset_left = 20.0
offset_top = -50.0
offset_right = 62.0
offset_bottom = -27.0

[node name="SFXVolumeSlider" type="VSlider" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 124.0
offset_top = -224.0
offset_right = 221.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("2_expmd")
theme_override_icons/grabber_highlight = ExtResource("2_expmd")
theme_override_styles/slider = SubResource("StyleBoxTexture_rine5")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_7e887")
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXVolumePercentage" type="Label" parent="SFXVolumeSlider"]
layout_mode = 0
offset_left = 20.0
offset_top = -50.0
offset_right = 60.0
offset_bottom = -27.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MusicVolumeAnimatedText" type="Sprite2D" parent="Control"]
position = Vector2(570, 540)
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_ttuvs")

[node name="SFXVolumeAnimatedText" type="Sprite2D" parent="Control"]
position = Vector2(930, 540)
scale = Vector2(0.5, 0.5)
texture = ExtResource("21_kuskj")
